# rust-synth

./: .gitignore  Cargo.toml  README.md
assets/fonts/: notes.txt
notes/: NOTES.md  TODO
src/: audio_out.rs  beep.rs  controller.rs  instrument.rs  keyboard_in.rs  lib.rs  main.rs  oscilator_ctrl.rs  pitches.rs  preset.rs  wave_gen.rs
src/core/: mod.rs
src/core/control/: arpeggiator.rs  controller.rs  duration_recorder.rs  instrument_player.rs  loop_recorder.rs  loops.rs  manual_controller.rs  mod.rs  playback_controller.rs  pulse.rs  sheet_music.rs  song.rs  synth.rs  tools.rs  transposer.rs
src/core/music_theory/: diatonic_scale.rs  mod.rs  pitch.rs  pitch_class.rs  rhythm.rs
src/core/sheet_music/: mod.rs  playing_music.rs  sheet_music.rs
src/core/synth/: builder.rs  envelope.rs  filter.rs  instrument.rs  lfo.rs  mod.rs  modulated.rs  oscillator.rs
src/core/synth/filter/: biquad.rs  mod.rs
src/core/synth/oscillator/: basic.rs  mix.rs  mod.rs  pulse.rs
src/core/tools/: arpeggiator.rs  loops.rs  mod.rs  pulse.rs  tap_tempo.rs  transposer.rs
src/core/tools/arpeggiator/: builder.rs  mod.rs  phrase.rs
src/gui/: keymap.rs  mod.rs  window.rs
src/io/: audio.rs  audio_out.rs  midi.rs  mod.rs  wav.rs
src/io/midi/: meta_events.rs  mod.rs  patch.rs
src/synth/: arpeggiator.rs  controller.rs  diatonic_scale.rs  envelope.rs  filter.rs  instrument.rs  loop_recorder.rs  mod.rs  modulation.rs  oscillator.rs  pitch.rs  pulse.rs  rhythm.rs
src/util/: duration.rs  mod.rs  range_map.rs  reckless_float.rs
