[package]
name = "rust-synth"
version = "0.1.0"
authors = ["Victor Basso <vitobasso@gmail.com>"]
edition = "2018"

[features]
default = ["winit", "glium"]
winit = []
glium = []

[dependencies]
cpal = "0.8.2"
conrod = { version = "0.61.1", features = ["winit", "glium"] }
find_folder = "0.3.0"
rand = "0.5.5"
num-traits = "0.2.6"
num-derive = "0.2.3"
rimd = { git = "https://github.com/RustAudio/rimd.git" }